tests/negative/test_expr_call_variad_unty.orb
fnc foo(...) () {};

fnc main() () {
    foo 1;
};